scan files added
