# services/gateway/cmd/main.go
@@ -99,6 +99,7 @@ func run() error {
 	))
 
 	r.HandleFunc("/scan/uri", scan.DomainIPUrl).Methods(http.MethodGet, http.MethodOptions)
+	r.HandleFunc("/scan/file", scan.ScanFile).Methods(http.MethodPost, http.MethodOptions)
 
 	r.NotFoundHandler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		common.RespondWithError(w, http.StatusNotFound, "Not Found")
